Pocetna verzija pocetne strane v2

--- a/index.css
+++ b/index.css
@@ -4,11 +4,11 @@
     text-align: center;
 }
 #navigacija a{
-    color: #f2f2f2;
+    /*color: #f2f2f2;*/
     padding: 20px;
 }
 #kontejner{
-    color: #f2f2f2;
+    /*color: #f2f2f2;*/
     width: 70%;
     margin-left: auto;
     margin-right: auto;
@@ -35,6 +35,11 @@ p{
     margin-top: 30px;
     margin-bottom: 30px;
     text-align: justify;
+}
+#warhammer_gimp{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
 }
 #world{
     width: 100%;
