--- a/index.css
+++ b/index.css
@@ -84,6 +84,7 @@ figcaption{
     border-radius: 20%;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 20px;
 }
 
 .xop-section {
