--- a/index.css
+++ b/index.css
@@ -38,10 +38,14 @@ h2{
     width: 100%;
     font-size: 40px;
 }
-table{
-    border: 1px solid blue;
+
+td{
+    width: 50%;
 }
 blockquote{
+    text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
     border-left: 5px solid black;
     border-right: 5px solid black;
     margin-top: 40px;
@@ -50,7 +54,8 @@ blockquote{
     text-align: center;
 }
 cite{
-    font-size: 15px;
+    text-align: center;
+    font-size: 20px;
 }
 p{
     margin-left: 30px;
