--- a/index.css
+++ b/index.css
@@ -13,14 +13,10 @@
     color: red;
     opacity: 1;
 }
-#kontejner{
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 25px;
+.trenutna{
+    color:black;
 }
-#kontejner2{
+.kontejneri{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
