--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@
     font-size: 25px;
 }
 h1{
+    font-family: 'Arvo', sans-serif;
     padding-top: 20px;
     width: 100%;
     font-size: 80px;
