--- a/index.css
+++ b/index.css
@@ -23,23 +23,31 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 25px;
 }
+@font-face{
+    font-family: 'Elvish';
+    src: url(halfelven.ttf);
+    font-style: normal;
+    font-weight: bold;
+}
 h1{
-    font-family: 'Arvo', sans-serif;
-    padding-top: 20px;
+    font-family: Elvish;
+    padding: 40px;
     width: 100%;
     font-size: 80px;
     text-align: center;
 }
 h2{
+    font-family: Elvish;
     padding-top: 20px;
     padding-bottom: 20px;
     width: 100%;
-    font-size: 40px;
+    font-size: 50px;
 }
 h4{
+    font-family: Elvish;
     padding-top: 20px;
     padding-bottom: 10px;
-    padding-left: 20px;
+    padding-left: 15px;
     width: 100%;
     font-size: 30px;
 }
@@ -88,6 +96,15 @@ ul{
 ol{
     list-style-type: upper-roman;
 }
+#pocetna{
+    width: 100%;
+}
+#pocetna td{
+    text-align: center;
+    font-size: medium;
+    width: 50%;
+    padding: 10px;
+}
 #warhammer_gimp{
     margin-top: 30px;
     margin-bottom: 30px;
@@ -126,71 +143,6 @@ ol{
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
-}
-
-.xop-section {
-	max-width: 960px;
-	margin: 0 auto;
-	padding: 6% 2%;
-}
-
-.xop-grid {
-	margin: 20px 0 0 0;
-	padding: 0;
-	list-style: none;
-	display: block;
-	text-align: center;
-	width: 100%;
-}
-
-.xop-grid li {
-	width: 350px;
-	height: 350px;
-	display: inline-block;
-	margin: 20px;
-}
-.xop-grid li {
-	width: 350px;
-	height: 350px;
-	display: inline-block;
-	margin: 20px;
-}
-
-.xop-box {
-	width: 100%;
-	height: 100%;
-	position: relative;
-	cursor: pointer;
-    border-radius: 10px;
-    -webkit-transition: 0.3s ease-in-out, 
-    -webkit-transform 0.3s ease-in-out;
-	-moz-transition:  0.3s ease-in-out, 
-    -moz-transform 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out, 
-    transform 0.3s ease-in-out, ;
-}
-
-.xop-box:hover {
-	transform: scale(1.05); 
-}
-.xop-img-1 {
-	background: linear-gradient( rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.10)), /* bottom, image */
-	url(khorne.jpg);
-}
-
-.xop-img-2 {
-	background: linear-gradient( rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.10)), /* bottom, image */
-	url(nurgle.jpg);
-}
-
-.xop-img-3 {
-	background: linear-gradient( rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.10)), /* bottom, image */
-	url(tzeentch.jpg);
-}
-
-.xop-img-4 {
-	background: linear-gradient( rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.10)), /* bottom, image */
-	url(slaanesh.jpg);
 }
 /*-----------------------------------*/
 .slika{
